--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ function MM_swapImage() { //v3.0
 <h1>Infografía</h1>
 <div>
 <p>Infografía sobre el día internacional de la salud</p>
-<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image35','','imagenes/222195.png',1)"><img src="imagenes/Infogra.jpg" width="550" height="850" id="Image35"></a></p>
+<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image35','','imagenes/222195.png',1)"><img src="imagenes/Infogra.jpg" width="60%" height="60%" id="Image35"></a></p>
 <div></div>
 
 <div></div>
