--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ function MM_swapImage() { //v3.0
 <h4>Aplicación 3 Día internacional de la salud</h4>
 <h4>García Sánchez Bruno Moreau</h4>
 </div>
-
+</div>
 
 <div data-role="page" id="Pagina2" data-add-back-btn="true" data-theme="a">
  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
